@@ -12,6 +12,9 @@ class ImagePage extends Article {
 	 */
 	private $img;
 	private $displayImg;
+	/**
+	 * @var FileRepo
+	 */
 	private $repo;
 	private $fileLoaded;
 
@@ -161,11 +164,16 @@ class ImagePage extends Article {
 			$wgOut->addWikiText( $this->makeMetadataTable( $formattedMetadata ) );
 			$wgOut->addModules( array( 'mediawiki.action.view.metadata' ) );
 		}
-		
-		$css = $this->repo->getDescriptionStylesheetUrl();
-		if ( $css ) {
-			$wgOut->addStyle( $css );
+
+		// Add remote Filepage.css
+		if( !$this->repo->isLocal() ) {
+			$css = $this->repo->getDescriptionStylesheetUrl();
+			if ( $css ) {
+				$wgOut->addStyle( $css );
+			}
 		}
+		// always show the local local Filepage.css, bug 29277
+		$wgOut->addModuleStyles( 'filepage' );
 	}
 	
 	public function getRedirectTarget() {
